--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -61,6 +61,7 @@
             });
         
             if (response.ok) {
+                // Ir al home después del login exitoso
                 window.location.href = '/';
             } else {
                 // Opcional: mostrar error
